@@ -1,4 +1,5 @@
 [CW30]
+* GetDTCs dialog and message: add dtcMask and remove encrypted parameter.
 + PerformAudioPassThru dialog and message: add muteAudio parameter.
 * ImageType value is DYNAMIC by default.
 * SetGlobalProperties, AddCommand, CreateInteractionChoiceSet, PerformInteraction dialogs: allow to set multiple VR commands/synonyms parameters as comma-separated strings.
